--- a/index.html
+++ b/index.html
@@ -157,31 +157,33 @@
       </div>
     </section>
 
-    <section class="section section-imperative">
+    <div class="section section-imperative">
       <article class="section-imperative-item">
         <div class="imperative-item-picture-container">
           <picture class="imperative-item-picture">
             <source media="(max-width: 640px)" srcset="img/be-active_640.jpg"
             class="imperative-item-picture">
-            <source media="(min-width: 641px) and (max-width: 960px)" srcset="img/be-active_960.jpg"
+            <source media="(min-width: 641px) and (max-width: 1920px)" srcset="img/be-active_960.jpg"
             class="imperative-item-picture">
-            <source media="(min-width: 961px)" srcset="img/be-active_1024.jpg"
+            <source media="(min-width: 1921px)" srcset="img/be-active_1024.jpg"
             class="imperative-item-picture">  
             <img src="be-active.jpg" alt="man looks at his smartphone"
             class="imperative-item-picture">
           </picture>  
         </div>
-        <header class="section-item-header imperative-item-header">
-          <div class="imperative-item-number-container">
-            <span class="section-item-number imperative-item-number">01</span>
+        <div class="imperative-item-text-container">
+          <header class="section-item-header imperative-item-header">
+            <div class="imperative-item-number-container">
+              <span class="section-item-number imperative-item-number">01</span>
+            </div>
+            <h3 class="section-item-header-text imperative-item-header-text">be active</h3>
+          </header>
+          <div class="section-text-container">
+            <p class="section-text">
+              Post videos with your skills, Like and follow others to be 
+              more popular.
+            </p>
           </div>
-          <h3 class="section-item-header-text imperative-item-header-text">be active</h3>
-        </header>
-        <div class="section-text-container">
-          <p class="section-text">
-            Post videos with your skills, Like and follow others to be 
-            more popular.
-          </p>
         </div>
       </article>
       <article class="section-imperative-item">
@@ -198,20 +200,22 @@
             something in coach's hands" class="imperative-item-picture">  
           </picture>
         </div>
-        <header class="section-item-header imperative-item-header">
-          <div class="imperative-item-number-container">
-            <span class="section-item-number imperative-item-number">02</span>
+        <div class="imperative-item-text-container">
+          <header class="section-item-header imperative-item-header">
+            <div class="imperative-item-number-container">
+              <span class="section-item-number imperative-item-number">02</span>
+            </div>
+            <h3 class="section-item-header-text imperative-item-header-text">find contact</h3>
+          </header>
+          <div class="section-text-container">
+            <p class="section-text">
+              Contact others to find right coach or athlete you are looking for.
+            </p>
           </div>
-          <h3 class="section-item-header-text imperative-item-header-text">find-contact</h3>
-        </header>
-        <div class="section-text-container">
-          <p class="section-text">
-            Contact others to find right coach or athlete you are looking for.
-          </p>
-        </div>
+        </div>  
       </article>
       <article class="section-imperative-item">
-        <div class="imperative-picture-container">
+        <div class="imperative-item-picture-container">
           <picture>
             <source media="(max-width: 640px)" srcset="img/work-it_640.jpg"
             class="imperative-item-picture">
@@ -224,38 +228,42 @@
               something in coach's hands" class="imperative-item-picture">  
           </picture>
         </div>
-        <header class="section-item-header imperative-item-header">
-          <div class="imperative-item-number-container">
-            <span class="section-item-number imperative-item-number">03</span>
+        <div class="imperative-item-text-container">  
+          <header class="section-item-header imperative-item-header">
+            <div class="imperative-item-number-container">
+              <span class="section-item-number imperative-item-number">03</span>
+            </div>
+            <h3 class="section-item-header-text imperative-item-header-text">work it</h3>
+          </header>
+          <div class="section-text-container">
+            <p class="section-text">
+              Enjoy being a student athlete, the recruiting process can be 
+              overwhelming, we want to make this enjoyable experience. 
+            </p>
           </div>
-          <h3 class="section-item-header-text imperative-item-header-text">work it</h3>
-        </header>
-        <div class="section-text-container">
-          <p class="section-text">
-            Enjoy being a student athlete, the recruiting process can be 
-            overwhelming, we want to make this enjoyable experience. 
-          </p>
-        </div>
+        </div>  
       </article>
-    </section>
+    </div>
   </main>
 
   <footer class="footer">
     <div class="footer-container">
-      <div class="logo-button">
-        <a href="#0" class="logo-button-link">
-          <svg viewBox="0 0 288 264" xmlns="http://www.w3.org/2000/svg">
-            <g fill-rule="evenodd">
-              <path d="M115.5 36.848v190.304L253.03 132 115.5 36.848zM282.112 142.28l-172 119c-8.29 5.736-19.612-.198-19.612-10.28V13c0-10.082 11.321-16.016 19.612-10.28l172 119c7.184 4.97 7.184 15.59 0 20.56z" fill-rule="nonzero"/>
-              <path d="M42.5 107h107a8 8 0 1 0 0-16h-107a8 8 0 1 0 0 16zm0 70h107a8 8 0 1 0 0-16h-107a8 8 0 1 0 0 16zM8 143h168a8 8 0 1 0 0-16H8a8 8 0 1 0 0 16z" fill-rule="nonzero" stroke-linecap="round" stroke-linejoin="round"/>
-            </g>
-          </svg>
-        </a>
+      <div class="footer-big-header">
+        <div class="logo-button">
+          <a href="#0" class="logo-button-link">
+            <svg viewBox="0 0 288 264" xmlns="http://www.w3.org/2000/svg">
+              <g fill-rule="evenodd">
+                <path d="M115.5 36.848v190.304L253.03 132 115.5 36.848zM282.112 142.28l-172 119c-8.29 5.736-19.612-.198-19.612-10.28V13c0-10.082 11.321-16.016 19.612-10.28l172 119c7.184 4.97 7.184 15.59 0 20.56z" fill-rule="nonzero"/>
+                <path d="M42.5 107h107a8 8 0 1 0 0-16h-107a8 8 0 1 0 0 16zm0 70h107a8 8 0 1 0 0-16h-107a8 8 0 1 0 0 16zM8 143h168a8 8 0 1 0 0-16H8a8 8 0 1 0 0 16z" fill-rule="nonzero" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+            </svg>
+          </a>
+        </div>
+        <div class="footer-header">
+          <h2 class="footer-header-text">download app</h2>
+          <span class="footer-header-slogan">show everyone what you can do!</span>
+        </div>
       </div>
-      <header class="footer-header">
-        <h2 class="footer-header-text">download app</h2>
-        <h3 class="footer-header-slogan">show everyone what you can do!</h3>
-      </header>
       <address class="apps">
         <ul class="list apps-list">
           <li class="apps-list-item">
