--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </article>
       <article class="section-imperative-item">
         <div class="imperative-item-picture-container">
-          <picture>
+          <picture class="imperative-item-picture">
             <source media="(max-width: 640px)" srcset="img/find-contact_640.jpg"
             class="imperative-item-picture">
             <source media="(min-width: 641px) and (max-width: 960px)" srcset="img/find-contact_960.jpg"
@@ -216,7 +216,7 @@
       </article>
       <article class="section-imperative-item">
         <div class="imperative-item-picture-container">
-          <picture>
+          <picture class="imperative-item-picture">
             <source media="(max-width: 640px)" srcset="img/work-it_640.jpg"
             class="imperative-item-picture">
             <source media="(min-width: 641px) and (max-width: 960px)" srcset="img/work-it_960.jpg"
