--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
           <source media="(max-width: 640px)" srcset="img/footballer_192.png">
           <source media="(min-width: 641px) and (max-width: 960px)" srcset="img/footballer_497.png">
           <source media="(min-width: 961px)" srcset="img/footballer_566.png">  
-          <img src="img/footballer_566.png" alt="footballer-picture">
+          <img src="img/footballer_497.png" alt="footballer-picture">
         </picture>
       </div>
       <div class="section-list athlets-list">
         <div class="section-item-container athlets-item-container">
           <header class="section-item-header">
             <span class="section-item-number athlets-item-number">01</span>
-            <h3 class="section-item-header-text">connection</h3>
+            <h3 class="section-item-header-text">connection with others</h3>
           </header>
           <div class="section-text-container">
             <p class="section-text">
@@ -115,7 +115,7 @@
           <source media="(max-width: 640px)" srcset="img/basketballer_302.png">
           <source media="(min-width: 641px) and (max-width: 960px)" srcset="img/basketballer_436.png">
           <source media="(min-width: 961px)" srcset="img/basketballer_991.png">  
-          <img src="basketballer_302.png" alt="img/basketballer-picture">
+          <img src="img/basketballer_991.png" alt="basketballer picture">
         </picture>
       </div>
       <div class="section-list players-list">
@@ -161,13 +161,10 @@
       <article class="section-imperative-item">
         <div class="imperative-item-picture-container">
           <picture class="imperative-item-picture">
-            <source media="(max-width: 640px)" srcset="img/be-active_640.jpg"
-            class="imperative-item-picture">
-            <source media="(min-width: 641px) and (max-width: 1920px)" srcset="img/be-active_960.jpg"
-            class="imperative-item-picture">
-            <source media="(min-width: 1921px)" srcset="img/be-active_1024.jpg"
-            class="imperative-item-picture">  
-            <img src="be-active.jpg" alt="man looks at his smartphone"
+            <source media="(max-width: 640px)" srcset="img/be-active_640.jpg">
+            <source media="(min-width: 641px) and (max-width: 1920px)" srcset="img/be-active_960.jpg">
+            <source media="(min-width: 1921px)" srcset="img/be-active_1024.jpg">  
+            <img src="img/be-active_960.jpg" alt="man looks at his smartphone"
             class="imperative-item-picture">
           </picture>  
         </div>
@@ -189,13 +186,10 @@
       <article class="section-imperative-item">
         <div class="imperative-item-picture-container">
           <picture class="imperative-item-picture">
-            <source media="(max-width: 640px)" srcset="img/find-contact_640.jpg"
-            class="imperative-item-picture">
-            <source media="(min-width: 641px) and (max-width: 960px)" srcset="img/find-contact_960.jpg"
-            class="imperative-picture">
-            <source media="(min-width: 961px)" srcset="img/find-contact_1024.jpg"
-            class="imperative-picture">
-            <img src="img/find-contact.jpg" alt="senior man wears headphones with a speaker 
+            <source media="(max-width: 640px)" srcset="img/find-contact_640.jpg">
+            <source media="(min-width: 641px) and (max-width: 960px)" srcset="img/find-contact_960.jpg">
+            <source media="(min-width: 961px)" srcset="img/find-contact_1024.jpg">
+            <img src="img/find-contact_960.jpg" alt="senior man wears headphones with a speaker 
             and looks downward. young football player stands behind and looks at 
             something in coach's hands" class="imperative-item-picture">  
           </picture>
@@ -217,13 +211,10 @@
       <article class="section-imperative-item">
         <div class="imperative-item-picture-container">
           <picture class="imperative-item-picture">
-            <source media="(max-width: 640px)" srcset="img/work-it_640.jpg"
-            class="imperative-item-picture">
-            <source media="(min-width: 641px) and (max-width: 960px)" srcset="img/work-it_960.jpg"
-            class="imperative-item-picture">
-            <source media="(min-width: 961px)" srcset="img/work-it_1024.jpg"
-            class="imperative-item-picture">
-            <img src="img/work-it.jpg" alt="senior man wears headphones with a speaker 
+            <source media="(max-width: 640px)" srcset="img/work-it_640.jpg">
+            <source media="(min-width: 641px) and (max-width: 960px)" srcset="img/work-it_960.jpg">
+            <source media="(min-width: 961px)" srcset="img/work-it_1024.jpg">
+            <img src="img/work-it_960.jpg" alt="senior man wears headphones with a speaker 
               and looks downward. young football player stands behind and looks at 
               something in coach's hands" class="imperative-item-picture">  
           </picture>
